discrete_math/labs/Bison-antlr/src/GoodLanguageParser.java
// Generated from src/GoodLanguage.g4 by ANTLR 4.5.3
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GoodLanguageParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, DEF=8, FOR=9, 
		WHILE=10, ELSE=11, RETURN=12, SWAP=13, SQRT=14, IF=15, OR=16, AND=17, 
		NOT=18, L=19, LE=20, G=21, GE=22, E=23, NE=24, LCURLY=25, RCURLY=26, RD=27, 
		WR=28, WRL=29, VAR=30, PLUS=31, MINUS=32, MULT=33, DIV=34, PR=35, NUMBER=36, 
		LPAREN=37, RPAREN=38, NAME=39, COMMA=40, ASSIGN=41, SEMICOLON=42, WS=43, 
		NWR=44, NL=45;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_assignment = 2, RULE_variables = 3, 
		RULE_lvalueblock = 4, RULE_lvalue = 5, RULE_rvalue = 6, RULE_atom = 7, 
		RULE_rvalueblock = 8, RULE_function = 9, RULE_read = 10, RULE_write = 11, 
		RULE_writable = 12, RULE_line = 13, RULE_body = 14, RULE_forStructure = 15, 
		RULE_forAtom = 16, RULE_forBlock = 17, RULE_booleanExpression = 18, RULE_booleanTerm = 19, 
		RULE_booleanAtom = 20, RULE_compare = 21, RULE_whileStructure = 22, RULE_ifStructure = 23, 
		RULE_returnStructure = 24, RULE_booleanValue = 25, RULE_swap = 26, RULE_sqrt = 27, 
		RULE_method = 28;
	public static final String[] ruleNames = {
		"program", "statement", "assignment", "variables", "lvalueblock", "lvalue", 
		"rvalue", "atom", "rvalueblock", "function", "read", "write", "writable", 
		"line", "body", "forStructure", "forAtom", "forBlock", "booleanExpression", 
		"booleanTerm", "booleanAtom", "compare", "whileStructure", "ifStructure", 
		"returnStructure", "booleanValue", "swap", "sqrt", "method"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'\"'", "'.'", "':'", "'\r'", "'..'", "'false'", "'true'", "'def'", 
		"'for'", "'while'", "'else'", "'return'", "'swap'", "'sqrt'", "'if'", 
		"'|'", "'&'", "'!'", "'<'", "'<='", "'>'", "'>='", "'=='", null, "'{'", 
		"'}'", "'>>'", "'<<'", "'<<<'", "'var'", "'+'", "'-'", "'*'", "'/'", "'%'", 
		null, "'('", "')'", null, "','", "'='", "';'", null, null, "'\n'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, "DEF", "FOR", "WHILE", 
		"ELSE", "RETURN", "SWAP", "SQRT", "IF", "OR", "AND", "NOT", "L", "LE", 
		"G", "GE", "E", "NE", "LCURLY", "RCURLY", "RD", "WR", "WRL", "VAR", "PLUS", 
		"MINUS", "MULT", "DIV", "PR", "NUMBER", "LPAREN", "RPAREN", "NAME", "COMMA", 
		"ASSIGN", "SEMICOLON", "WS", "NWR", "NL"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "GoodLanguage.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GoodLanguageParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public List<MethodContext> method() {
			return getRuleContexts(MethodContext.class);
		}
		public MethodContext method(int i) {
			return getRuleContext(MethodContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GoodLanguageListener ) ((GoodLanguageListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GoodLanguageListener ) ((GoodLanguageListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GoodLanguageVisitor ) return ((GoodLanguageVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(60);
				switch (_input.LA(1)) {
				case DEF:
					{
					setState(58);
					method();
					}
					break;
				case FOR:
				case WHILE:
				case RETURN:
				case SWAP:
				case IF:
				case RD:
				case WR:
				case WRL:
				case VAR:
				case NAME:
					{
					setState(59);
					statement();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(62); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DEF) | (1L << FOR) | (1L << WHILE) | (1L << RETURN) | (1L << SWAP) | (1L << IF) | (1L << RD) | (1L << WR) | (1L << WRL) | (1L << VAR) | (1L << NAME))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public ForStructureContext forStructure() {
			return getRuleContext(ForStructureContext.class,0);
		}
		public WhileStructureContext whileStructure() {
			return getRuleContext(WhileStructureContext.class,0);
		}
		public ReadContext read() {
			return getRuleContext(ReadContext.class,0);
		}
		public WriteContext write() {
			return getRuleContext(WriteContext.class,0);
		}
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public VariablesContext variables() {
			return getRuleContext(VariablesContext.class,0);
		}
		public IfStructureContext ifStructure() {
			return getRuleContext(IfStructureContext.class,0);
		}
		public SwapContext swap() {
			return getRuleContext(SwapContext.class,0);
		}
		public ReturnStructureContext returnStructure() {
			return getRuleContext(ReturnStructureContext.class,0);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(GoodLanguageParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(GoodLanguageParser.SEMICOLON, i);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GoodLanguageListener ) ((GoodLanguageListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GoodLanguageListener ) ((GoodLanguageListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GoodLanguageVisitor ) return ((GoodLanguageVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(64);
				assignment();
				}
				break;
			case 2:
				{
				setState(65);
				forStructure();
				}
				break;
			case 3:
				{
				setState(66);
				whileStructure();
				}
				break;
			case 4:
				{
				setState(67);
				read();
				}
				break;
			case 5:
				{
				setState(68);
				write();
				}
				break;
			case 6:
				{
				setState(69);
				function();
				}
				break;
			case 7:
				{
				setState(70);
				variables();
				}
				break;
			case 8:
				{
				setState(71);
				ifStructure();
				}
				break;
			case 9:
				{
				setState(72);
				swap();
				}
				break;
			case 10:
				{
				setState(73);
				returnStructure();
				}
				break;
			}
			setState(79);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(76);
					match(SEMICOLON);
					}
					} 
				}
				setState(81);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentContext extends ParserRuleContext {
		public LvalueblockContext lvalueblock() {
			return getRuleContext(LvalueblockContext.class,0);
		}
		public TerminalNode ASSIGN() { return getToken(GoodLanguageParser.ASSIGN, 0); }
		public RvalueblockContext rvalueblock() {
			return getRuleContext(RvalueblockContext.class,0);
		}
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GoodLanguageListener ) ((GoodLanguageListener)listener).enterAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GoodLanguageListener ) ((GoodLanguageListener)listener).exitAssignment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GoodLanguageVisitor ) return ((GoodLanguageVisitor<? extends T>)visitor).visitAssignment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_assignment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			lvalueblock();
			setState(83);
			match(ASSIGN);
			setState(84);
			rvalueblock();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariablesContext extends ParserRuleContext {
		public TerminalNode VAR() { return getToken(GoodLanguageParser.VAR, 0); }
		public LvalueblockContext lvalueblock() {
			return getRuleContext(LvalueblockContext.class,0);
		}
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public VariablesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variables; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GoodLanguageListener ) ((GoodLanguageListener)listener).enterVariables(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GoodLanguageListener ) ((GoodLanguageListener)listener).exitVariables(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GoodLanguageVisitor ) return ((GoodLanguageVisitor<? extends T>)visitor).visitVariables(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariablesContext variables() throws RecognitionException {
		VariablesContext _localctx = new VariablesContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_variables);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			match(VAR);
			setState(89);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(87);
				lvalueblock();
				}
				break;
			case 2:
				{
				setState(88);
				assignment();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LvalueblockContext extends ParserRuleContext {
		public List<LvalueContext> lvalue() {
			return getRuleContexts(LvalueContext.class);
		}
		public LvalueContext lvalue(int i) {
			return getRuleContext(LvalueContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(GoodLanguageParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(GoodLanguageParser.COMMA, i);
		}
		public LvalueblockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lvalueblock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GoodLanguageListener ) ((GoodLanguageListener)listener).enterLvalueblock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GoodLanguageListener ) ((GoodLanguageListener)listener).exitLvalueblock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GoodLanguageVisitor ) return ((GoodLanguageVisitor<? extends T>)visitor).visitLvalueblock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LvalueblockContext lvalueblock() throws RecognitionException {
		LvalueblockContext _localctx = new LvalueblockContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_lvalueblock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			lvalue();
			setState(96);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(92);
				match(COMMA);
				setState(93);
				lvalue();
				}
				}
				setState(98);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LvalueContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(GoodLanguageParser.NAME, 0); }
		public LvalueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lvalue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GoodLanguageListener ) ((GoodLanguageListener)listener).enterLvalue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GoodLanguageListener ) ((GoodLanguageListener)listener).exitLvalue(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GoodLanguageVisitor ) return ((GoodLanguageVisitor<? extends T>)visitor).visitLvalue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LvalueContext lvalue() throws RecognitionException {
		LvalueContext _localctx = new LvalueContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_lvalue);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			match(NAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RvalueContext extends ParserRuleContext {
		public List<AtomContext> atom() {
			return getRuleContexts(AtomContext.class);
		}
		public AtomContext atom(int i) {
			return getRuleContext(AtomContext.class,i);
		}
		public List<TerminalNode> PLUS() { return getTokens(GoodLanguageParser.PLUS); }
		public TerminalNode PLUS(int i) {
			return getToken(GoodLanguageParser.PLUS, i);
		}
		public List<TerminalNode> MINUS() { return getTokens(GoodLanguageParser.MINUS); }
		public TerminalNode MINUS(int i) {
			return getToken(GoodLanguageParser.MINUS, i);
		}
		public List<TerminalNode> MULT() { return getTokens(GoodLanguageParser.MULT); }
		public TerminalNode MULT(int i) {
			return getToken(GoodLanguageParser.MULT, i);
		}
		public List<TerminalNode> DIV() { return getTokens(GoodLanguageParser.DIV); }
		public TerminalNode DIV(int i) {
			return getToken(GoodLanguageParser.DIV, i);
		}
		public List<TerminalNode> PR() { return getTokens(GoodLanguageParser.PR); }
		public TerminalNode PR(int i) {
			return getToken(GoodLanguageParser.PR, i);
		}
		public RvalueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rvalue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GoodLanguageListener ) ((GoodLanguageListener)listener).enterRvalue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GoodLanguageListener ) ((GoodLanguageListener)listener).exitRvalue(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GoodLanguageVisitor ) return ((GoodLanguageVisitor<? extends T>)visitor).visitRvalue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RvalueContext rvalue() throws RecognitionException {
		RvalueContext _localctx = new RvalueContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_rvalue);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			_la = _input.LA(1);
			if (_la==PLUS || _la==MINUS) {
				{
				setState(101);
				_la = _input.LA(1);
				if ( !(_la==PLUS || _la==MINUS) ) {
				_errHandler.recoverInline(this);
				} else {
					consume();
				}
				}
			}

			{
			setState(104);
			atom();
			setState(109);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MULT) | (1L << DIV) | (1L << PR))) != 0)) {
				{
				{
				setState(105);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MULT) | (1L << DIV) | (1L << PR))) != 0)) ) {
				_errHandler.recoverInline(this);
				} else {
					consume();
				}
				setState(106);
				atom();
				}
				}
				setState(111);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
			setState(123);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==PLUS || _la==MINUS) {
				{
				{
				setState(112);
				_la = _input.LA(1);
				if ( !(_la==PLUS || _la==MINUS) ) {
				_errHandler.recoverInline(this);
				} else {
					consume();
				}
				{
				setState(113);
				atom();
				setState(118);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MULT) | (1L << DIV) | (1L << PR))) != 0)) {
					{
					{
					setState(114);
					_la = _input.LA(1);
					if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MULT) | (1L << DIV) | (1L << PR))) != 0)) ) {
					_errHandler.recoverInline(this);
					} else {
						consume();
					}
					setState(115);
					atom();
					}
					}
					setState(120);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				}
				}
				setState(125);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AtomContext extends ParserRuleContext {
		public TerminalNode NUMBER() { return getToken(GoodLanguageParser.NUMBER, 0); }
		public LvalueContext lvalue() {
			return getRuleContext(LvalueContext.class,0);
		}
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(GoodLanguageParser.LPAREN, 0); }
		public RvalueContext rvalue() {
			return getRuleContext(RvalueContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(GoodLanguageParser.RPAREN, 0); }
		public SqrtContext sqrt() {
			return getRuleContext(SqrtContext.class,0);
		}
		public AtomContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atom; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GoodLanguageListener ) ((GoodLanguageListener)listener).enterAtom(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GoodLanguageListener ) ((GoodLanguageListener)listener).exitAtom(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GoodLanguageVisitor ) return ((GoodLanguageVisitor<? extends T>)visitor).visitAtom(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AtomContext atom() throws RecognitionException {
		AtomContext _localctx = new AtomContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_atom);
		try {
			setState(134);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(126);
				match(NUMBER);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(127);
				lvalue();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(128);
				function();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(129);
				match(LPAREN);
				setState(130);
				rvalue();
				setState(131);
				match(RPAREN);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(133);
				sqrt();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RvalueblockContext extends ParserRuleContext {
		public List<RvalueContext> rvalue() {
			return getRuleContexts(RvalueContext.class);
		}
		public RvalueContext rvalue(int i) {
			return getRuleContext(RvalueContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(GoodLanguageParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(GoodLanguageParser.COMMA, i);
		}
		public RvalueblockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rvalueblock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GoodLanguageListener ) ((GoodLanguageListener)listener).enterRvalueblock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GoodLanguageListener ) ((GoodLanguageListener)listener).exitRvalueblock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GoodLanguageVisitor ) return ((GoodLanguageVisitor<? extends T>)visitor).visitRvalueblock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RvalueblockContext rvalueblock() throws RecognitionException {
		RvalueblockContext _localctx = new RvalueblockContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_rvalueblock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			rvalue();
			setState(141);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(137);
				match(COMMA);
				setState(138);
				rvalue();
				}
				}
				setState(143);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(GoodLanguageParser.NAME, 0); }
		public TerminalNode LPAREN() { return getToken(GoodLanguageParser.LPAREN, 0); }
		public RvalueblockContext rvalueblock() {
			return getRuleContext(RvalueblockContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(GoodLanguageParser.RPAREN, 0); }
		public FunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GoodLanguageListener ) ((GoodLanguageListener)listener).enterFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GoodLanguageListener ) ((GoodLanguageListener)listener).exitFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GoodLanguageVisitor ) return ((GoodLanguageVisitor<? extends T>)visitor).visitFunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionContext function() throws RecognitionException {
		FunctionContext _localctx = new FunctionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_function);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			match(NAME);
			setState(145);
			match(LPAREN);
			setState(146);
			rvalueblock();
			setState(147);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReadContext extends ParserRuleContext {
		public TerminalNode RD() { return getToken(GoodLanguageParser.RD, 0); }
		public LvalueblockContext lvalueblock() {
			return getRuleContext(LvalueblockContext.class,0);
		}
		public ReadContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_read; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GoodLanguageListener ) ((GoodLanguageListener)listener).enterRead(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GoodLanguageListener ) ((GoodLanguageListener)listener).exitRead(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GoodLanguageVisitor ) return ((GoodLanguageVisitor<? extends T>)visitor).visitRead(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ReadContext read() throws RecognitionException {
		ReadContext _localctx = new ReadContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_read);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			match(RD);
			setState(150);
			lvalueblock();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
